--- a/StankinsDemos/Demo5PBX/jobDefinition.html
+++ b/StankinsDemos/Demo5PBX/jobDefinition.html
@@ -1,4 +1,4 @@
-<html><body><h1>Job visualization</h1>Number Rows: 11
+<html><body><h1>Job visualization</h1>Number Rows: 14
 <table>
 <thead>
 <tr>
@@ -15,7 +15,7 @@ RowType
 <tbody>
 <tr>
 <td>
-Receiver from folder D:\github\stankins\StankinsDemos\bin\Debug\netcoreapp1.0\PBX with *.log
+Receiver from folder E:\Repos\stankins\StankinsDemos\bin\Debug\netcoreapp1.0\PBX with *.log
 </td>
 <td>
 ReceiverFolderHierarchical
@@ -81,6 +81,17 @@ Filter_Transformer
 </tr>
 <tr>
 <td>
+Regex for field text to add group names as fields
+</td>
+<td>
+TransformRowRegex
+</td>
+<td>
+Filter_Transformer
+</td>
+</tr>
+<tr>
+<td>
 transform datePBX:String to NewDatePBX:DateTime
 </td>
 <td>
@@ -103,7 +114,29 @@ Filter_Transformer
 </tr>
 <tr>
 <td>
-remain just NewDatePBX,lineNr,text,FullName,LastWriteTimeUtc, removing all others
+adding field tkey as latest value if not exists
+</td>
+<td>
+TransformAddNewField
+</td>
+<td>
+Filter_Transformer
+</td>
+</tr>
+<tr>
+<td>
+adding field tvalue as latest value if not exists
+</td>
+<td>
+TransformAddNewField
+</td>
+<td>
+Filter_Transformer
+</td>
+</tr>
+<tr>
+<td>
+remain just NewDatePBX,lineNr,text,FullName,LastWriteTimeUtc,tkey,tvalue, removing all others
 </td>
 <td>
 TransformRowRemainsProperties
@@ -136,7 +169,7 @@ Sender
 </tr>
 <tbody>
 </table> <script src='https://github.com/mdaines/viz.js/releases/download/v1.8.0/viz.js'></script>
-<script>var result = Viz('digraph Name{Node157 [label="Receiver from folder D:\\\\github\\\\stankins\\\\StankinsDemos\\\\bin\\\\Debug\\\\netcoreapp1.0\\\\PBX with *.log" shape=cylinder color=lightblue];Node158 [label="RowType Equal file" shape=invhouse   color=lightgrey];Node157 -> Node158;Node159 [label="Serializable LastWriteTimeUtc Greater 1/1/0001 12:00:00 AM" shape=invhouse   color=lightgrey];Node158 -> Node159;Node160 [label="remove all rows with LastWriteTimeUtc = Max" shape=invhouse   color=lightgrey];Node159 -> Node160;Node161 [label="load file lines from FullName field" shape=invhouse   color=lightgrey];Node160 -> Node161;Node162 [label="Regex for field text to add group names as fields" shape=invhouse   color=lightgrey];Node161 -> Node162;Node163 [label="transform datePBX:String to NewDatePBX:DateTime" shape=invhouse   color=lightgrey];Node162 -> Node163;Node164 [label="adding field NewDatePBX as latest value if not exists" shape=invhouse   color=lightgrey];Node163 -> Node164;Node165 [label="remain just NewDatePBX,lineNr,text,FullName,LastWriteTimeUtc, removing all others" shape=invhouse   color=lightgrey];Node164 -> Node165;Node166 [label="sender to sql server table PBXData by bulk copy" shape=signature color=lime];Node165 -> Node166;Node167 [label="serialize LastWriteTimeUtc with  into SerializeDataOnFile" shape=signature color=lime];Node166 -> Node167;}', {format: 'png-image-element' });
+<script>var result = Viz('digraph Name{Node163 [label="Receiver from folder E:\\\\Repos\\\\stankins\\\\StankinsDemos\\\\bin\\\\Debug\\\\netcoreapp1.0\\\\PBX with *.log" shape=cylinder color=lightblue];Node164 [label="RowType Equal file" shape=invhouse   color=lightgrey];Node163 -> Node164;Node165 [label="Serializable LastWriteTimeUtc Greater 1/1/0001 12:00:00 AM" shape=invhouse   color=lightgrey];Node164 -> Node165;Node166 [label="remove all rows with LastWriteTimeUtc = Max" shape=invhouse   color=lightgrey];Node165 -> Node166;Node167 [label="load file lines from FullName field" shape=invhouse   color=lightgrey];Node166 -> Node167;Node168 [label="Regex for field text to add group names as fields" shape=invhouse   color=lightgrey];Node167 -> Node168;Node169 [label="Regex for field text to add group names as fields" shape=invhouse   color=lightgrey];Node168 -> Node169;Node170 [label="transform datePBX:String to NewDatePBX:DateTime" shape=invhouse   color=lightgrey];Node169 -> Node170;Node171 [label="adding field NewDatePBX as latest value if not exists" shape=invhouse   color=lightgrey];Node170 -> Node171;Node172 [label="adding field tkey as latest value if not exists" shape=invhouse   color=lightgrey];Node171 -> Node172;Node173 [label="adding field tvalue as latest value if not exists" shape=invhouse   color=lightgrey];Node172 -> Node173;Node174 [label="remain just NewDatePBX,lineNr,text,FullName,LastWriteTimeUtc,tkey,tvalue, removing all others" shape=invhouse   color=lightgrey];Node173 -> Node174;Node175 [label="sender to sql server table PBXData by bulk copy" shape=signature color=lime];Node174 -> Node175;Node176 [label="serialize LastWriteTimeUtc with  into SerializeDataOnFile" shape=signature color=lime];Node175 -> Node176;}', {format: 'png-image-element' });
 document.body.appendChild(result);
 </script>
 </body></html>
