--- a/HtmlGenerator/stankins.html
+++ b/HtmlGenerator/stankins.html
@@ -426,7 +426,9 @@
 	<value name='Senders'>
 	 
 	
-	  <block type="Sender_CSV" inline="false"></block> 
+	  <block type="Sender_CSV" inline="false">
+	  <field name="fldFileName">Department.csv</field>
+	  </block> 
 	</value> 
 	</block>
 	 
