--- a/HtmlGenerator/wwwroot/js/stankins.html
+++ b/HtmlGenerator/wwwroot/js/stankins.html
@@ -446,7 +446,9 @@
       Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
       var code = Blockly.JavaScript.workspaceToCode(workspace);
 	  //debugger;
+	  window.alert(code);
 	  var x=eval(code);
+	  
 	  //$("#fileGenerated").val(code);
       $("#fileGenerated").val(JSON.stringify(x));
     }
