--- a/HtmlGenerator/wwwroot/js/stankins.html
+++ b/HtmlGenerator/wwwroot/js/stankins.html
@@ -434,39 +434,8 @@
 	 
   </xml>
 
-  <script>
-    var workspace = Blockly.inject('blocklyDiv',
-        {media: '../../media/',
-         toolbox: document.getElementById('toolbox')});
-    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),
-                               workspace);
-
-    function showCode() {
-      // Generate JavaScript code and display it.
-      Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
-      var code = Blockly.JavaScript.workspaceToCode(workspace);
-	  //debugger;
-	  window.alert(code);
-	  var x=eval(code);
-	  
-	  //$("#fileGenerated").val(code);
-      $("#fileGenerated").val(JSON.stringify(x));
-    }
-
-    function runCode() {
-      // Generate JavaScript code and run it.
-      window.LoopTrap = 1000;
-      Blockly.JavaScript.INFINITE_LOOP_TRAP =
-          'if (--window.LoopTrap == 0) throw "Infinite loop.";\n';
-      var code = Blockly.JavaScript.workspaceToCode(workspace);
-      Blockly.JavaScript.INFINITE_LOOP_TRAP = null;
-      try {
-        eval(code);
-      } catch (e) {
-        alert(e);
-      }
-    }
-  </script>
+  <script src='blocklyGenerator.js'></script>
+  
 <script src="hopscotch/js/hopscotch.min.js" ></script>  
 	<script src="hopscotch/jquery-1.7.2.min.js" ></script>  
 	<script src="hopscotch/demo.js" ></script>  
