now with variables set

--- a/HtmlGenerator/wwwroot/js/stankins.html
+++ b/HtmlGenerator/wwwroot/js/stankins.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -60,7 +60,7 @@
 <table style="width:90%">
 <tr>
 <td style="width:75%" valign='top'>
-<div id="blocklyDiv" style="height: 480px; width: 90%;"></div>
+<div id="blocklyDiv" style="float: right;height: 95%; width: 90%;"></div>
 </td>
 <td valign='top'>
 <textarea  cols="40" rows="50" id='fileGenerated' ></textarea>
