--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/wwwroot/index.html
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/wwwroot/index.html
@@ -1,17 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Stankins Alive </title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-<link rel="stylesheet" href="styles.eed5ed605f31747faa46.css"></head>
-<body>
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.27756df8e5093b8dc0c5.js"></script></body>
-</html>
+Here index.html from angular will be copied 
