--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Assets/HTML/AmazonCopyStackOverflow.html
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Assets/HTML/AmazonCopyStackOverflow.html
@@ -13020,14 +13020,14 @@ if (shouldExecuteOnload) {
 
 
 
-                <iframe name="iFrameHMD" id="iFrameHMD" height="0" width="0" style="border:none" src="javascript:'<html></html>'"></iframe>
+                <iframe  title='aaa' name="iFrameHMD" id="iFrameHMD" height="0" width="0" style="border:none" src="javascript:'<html></html>'"></iframe>
 
 
 
 
 
                 <a name="suggestion-box">&nbsp;<br /></a>
-                <center>
+                <div>
                     <div style="background-color:#eff7fe;border:1px solid #0f3c6d;padding:10px;text-align:left;" class="small">
                         <img alt="asdady1" src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/communities/reputation/suggestionbox._CB192249929_.gif" width="1" align="left" height="1" border="0" />
                         <div name="hmdFormDiv" id="hmdFormDiv">
@@ -13035,7 +13035,7 @@ if (shouldExecuteOnload) {
 
                                 <tr>
                                     <td>
-                                        <b class="h1">Feedback</strong>
+                                        <strong class="h1">Feedback</strong>
                                         <br />
                                         <span style="line-height:200%;">
                                             <table border="0">
@@ -13048,7 +13048,7 @@ if (shouldExecuteOnload) {
 
 
 
-                                                <iframe name="RTEiFrame" id="RTEiFrame" src="" style="display:none"></iframe>
+                                                <iframe title="asdaasdsad" name="RTEiFrame" id="RTEiFrame" src="" style="display:none"></iframe>
 
 
 
@@ -13100,7 +13100,7 @@ if (shouldExecuteOnload) {
                             </table>
                         </div>
                     </div>
-                </center>
+                </div>
                 <br />
 
 
